prusti-tests/tests/verify_overflow/ui/counterexamples/custom_ce-2.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/custom_ce-2.rs:19:11
   |
19 | #[ensures(x.model().a == 5)] 
   |           ^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/custom_ce-2.rs:20:1
   |
20 | fn test1(x: X) {}
   | ^^^^^^^^^^^^^^^^^
note: counterexample for "x"
       value:   model of X: a = 2
  --> $DIR/custom_ce-2.rs:20:10
   |
20 | fn test1(x: X) {}
   |          ^
note: counterexample for "x"
       value:   X: a = 2
  --> $DIR/custom_ce-2.rs:20:10
   |
20 | fn test1(x: X) {}
   |          ^
note: counterexample for "result"
       value:   ()
  --> $DIR/custom_ce-2.rs:20:16
   |
20 | fn test1(x: X) {}
   |                ^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/custom_ce-2.rs:24:11
   |
24 | #[ensures(!(x.model().a == y.model().a))]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/custom_ce-2.rs:25:1
   |
25 | fn test2(x: X, y: X) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^
note: counterexample for "x"
       value:   model of X: a = 2
  --> $DIR/custom_ce-2.rs:25:10
   |
25 | fn test2(x: X, y: X) {}
   |          ^
note: counterexample for "x"
       value:   X: a = 2
  --> $DIR/custom_ce-2.rs:25:10
   |
25 | fn test2(x: X, y: X) {}
   |          ^
note: counterexample for "y"
       value:   model of X: a = 2
  --> $DIR/custom_ce-2.rs:25:16
   |
25 | fn test2(x: X, y: X) {}
   |                ^
note: counterexample for "y"
       value:   X: a = 2
  --> $DIR/custom_ce-2.rs:25:16
   |
25 | fn test2(x: X, y: X) {}
   |                ^
note: counterexample for "result"
       value:   ()
  --> $DIR/custom_ce-2.rs:25:22
   |
25 | fn test2(x: X, y: X) {}
   |                      ^^

error: aborting due to 2 previous errors

